Formatted "have you forgotten your password" link that is shown in the popup dialog when the user has problems entering in the correct information.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -284,7 +284,7 @@ msgstr ""
 
 #: rs/constants.py:573
 msgid "<strong>Password</strong> required"
-msgstr "<strong>contraseña</strong> es obligatoria"
+msgstr "<strong>Contraseña</strong> es obligatoria"
 
 #: rs/constants.py:574
 msgid ""
