Work in progress - interm checkin. Making major updates to login and registration process so tht they will be fully ajax - and so that even if the user clicks on a verification link in an email, the internal code that deals with the link will be the same as if they had continued the registration process directly from the website.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: package version\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-11 19:31-0400\n"
+"POT-Creation-Date: 2013-09-11 22:27-0400\n"
 "PO-Revision-Date: year-mo-da ho:mi+zone\n"
 "Last-Translator: full name <email@address>\n"
 "Language-Team: language <ll@li.org>\n"
@@ -4897,10 +4897,12 @@ msgid ""
 "link included in the email.\n"
 "    "
 msgstr ""
+"\n"
 "Una vez que has recibido el correo electrónico desde %(app_name)s, para "
 "activar tu cuenta, puedes o bien introducir el código de verificación del "
 "correo electrónico en la casilla debajo o puedes hacer clic directamente en "
-"el vínculo de activación incluido en el correo electrónico. "
+"el vínculo de activación incluido en el correo electrónico. \n"
+"    "
 
 #: rs/templates/login_helpers/registration.html:83
 msgid "Verification Code"
@@ -4911,32 +4913,35 @@ msgid "Activate account"
 msgstr "Activar cuenta"
 
 #: rs/templates/login_helpers/registration.html:88
-#, python-format
 msgid ""
 "\n"
-"        Normally you will receive an email in few minutes, but this can "
+"        Normally you will receive an email in few seconds, but this can "
 "sometimes take\n"
-"        up to a half hour. If you do not receive an email from us, please "
+"        up to 15 minutes. If you do not receive an email from us, please "
 "check your Spam folder.\n"
 "        If the message from %(app_name)s has been marked as Spam, please "
 "mark it as not Spam.\n"
 "    "
 msgstr ""
-"Normalmente, recibirás un correo electrónico en pocos minutos, pero a veces "
-"puede tardar hasta media hora. Si no recibes un correo electrónico por favor "
+"\n"
+"Normalmente, recibirás un correo electrónico en pocos segundos, pero a veces "
+"puede tardar hasta 15 minutos. Si no recibes un correo electrónico por favor "
 "mira tu buzón de Spam. Si el mensaje de %(app_name)s ha sido marcado como "
-"Spam por favor márcalo como no Spam."
+"Spam por favor márcalo como no Spam.\n"
+"    "
 
 #: rs/templates/login_helpers/registration.html:96
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "\n"
 "          If you have any problems or suggestions, send us a message at: "
 "<strong>%(email)s</strong>.\n"
 "    "
 msgstr ""
+"\n"
 "Si tienes algun problema o sugerencia, envíanos un mensaje a: <strong>"
-"%(support_email_address)s</strong>."
+"%(email)s</strong>.\n"
+"    "
 
 #: rs/templates/login_helpers/registration.html:110
 msgid "Select Region"
