Removed default landing page. Now when users come to our website they will be directly shown search results.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -4892,7 +4892,7 @@ msgid ""
 "                        "
 msgstr ""
 "\n"
-"Se requiere una dirección de correo electronico válido para verificar tu "
+"* Se requiere una dirección de correo electronico válido para verificar tu "
 "cuenta. No enviamos spam, y estarás en control de las notificaciones quieras "
 "recibir."
 
