Fixed information about payment processing.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: package version\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-21 11:34-0400\n"
+"POT-Creation-Date: 2014-05-21 11:40-0400\n"
 "PO-Revision-Date: year-mo-da ho:mi+zone\n"
 "Last-Translator: full name <email@address>\n"
 "Language-Team: language <ll@li.org>\n"
@@ -492,7 +492,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Credit card payments are processed by PayPal, an eBay company, and "
-"one of the worlds largest online payment processors).\n"
+"one of the worlds largest online payment processors.\n"
 "        "
 msgstr ""
 "\n"
