--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-21 11:34-0400\n"
+"POT-Creation-Date: 2014-05-21 11:40-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -464,7 +464,7 @@ msgstr ""
 msgid ""
 "\n"
 "        Credit card payments are processed by PayPal, an eBay company, and "
-"one of the worlds largest online payment processors).\n"
+"one of the worlds largest online payment processors.\n"
 "        "
 msgstr ""
 
