Update time window and number of messages allowed to be sent to user that has already had previous contact.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -790,7 +790,7 @@ msgid ""
 msgstr ""
 "\n"
 "Podrás enviar y recibir hasta %(cf_num_messages)s mensaje por día a cada "
-"persona con quien ya hayas tenido contacto (en vez de uno mensaje por día "
+"persona con quien ya hayas tenido contacto (en vez de un mensaje por día "
 "para los socios no VIP)."
 
 #: client/app/html/user_main_helpers/vip_benefits.html:16
