--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-11-27 19:20-0500\n"
+"POT-Creation-Date: 2014-11-27 19:31-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1699,7 +1699,7 @@ msgstr ""
 
 #: rs/display_profiles_summary.py:97
 #, python-format
-msgid "Click here to get in contact with %s"
+msgid "Click here to see more of %s"
 msgstr ""
 
 #: rs/display_profiles_summary.py:123
